--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,9 +23,9 @@
 
 <h2> Burgers</h2>
 
-<form id="add" action="/burgers/add" method="POST">
-    <textarea name="burger_name"></textarea>
-    <button class="btn btn-warning" type="submit">Submit</button>
+<form id="add"  method="POST">
+    <textarea id = "burgername" name="burger_name"></textarea>
+    <button class="btn btn-warning "  type="submit">Submit</button>
   </form>
 
 </div>
