--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../../public/assets/css/style.css" type="text/css" />
 		<title>Burgers!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="../../models/burgers.js"></script>
+			<script src="/assets/js/burgers.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
@@ -17,13 +17,3 @@
 
 	</body>
 </html>
-<script type="javascript">
-$(".devour").on("click", function(){
-	$.ajax(
-		{
-			type: "put",
-			
-		}
-	)
-})
-</script>
